--- a/coding/assignment_html_&_css/html/index.html
+++ b/coding/assignment_html_&_css/html/index.html
@@ -7,7 +7,7 @@ Student ID: 2506636
 <head>
     <meta charset="UTF-8">
     <title>Fuzzy Mug Café Home</title>
-    <link rel="stylesheet" href="../css/cafe.css">
+    <link rel="stylesheet" href="assignment_html_&_css/css/cafe.css">
 </head>
 
 <body>
@@ -116,4 +116,5 @@ Student ID: 2506636
     </footer>
 </div>
 </body>
+
 </html>
